# tauri-audio-app

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
docs/: bugs.md
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/models/: README.md
src-tauri/src/: lib.rs  main.rs
