[package]
name = "tauri-audio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_audio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pin below time 0.3.47, whose internal ModifierValue impl trips rustc's
# strict coherence solver inside cookie/tauri-utils. Remove once upstream
# (time or rustc) ships a fix. See PLAN.md.
time = "=0.3.46"
whisper-rs = "0.16.0"
hound = "3.5.1"
cpal = "0.18.1"
rubato = "3.0.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
hyper = "=1.10.0"
keyring = { version = "3", features = ["apple-native"] }
